# ReVampCI

./: .env.template  .gitignore  Project_Vision.md  folder_structure.md  implementation.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  database.py  graph.py  main.py  state.py
src/agents/: __init__.py  analysis.py  codespace.py  coding.py  critic.py  parser.py  pr.py  repair.py  report.py  tester.py
src/utils/: __init__.py  architecture_critic.py  ast_parser.py  git_helper.py  github_api.py  logger.py  repository_intelligence.py
tests/: __init__.py  test_agents.py  test_api.py  test_phase1_flow.py  test_phase3_analysis.py  test_phase4_critic.py  test_phase5_repair.py
