[project]
name = "revampci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "gitpython>=3.1.50",
    "google-genai>=2.9.0",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tree-sitter>=0.25.2",
    "uvicorn>=0.49.0",
]
